welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:10: error: Boolean does not take parameters
	else ( b>=13 && b<=19){
                              ^